--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Riwan",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.12",
     "snowpack": "^3.8.8"
   },
   "dependencies": {
