no sourcemap on build
docker workflow

docker file

add assets

remove build-deploy

dockerfile update

Update and rename node.js.yml to docker.yml

normal player color

docker workflow

docker file

add assets

remove build-deploy

dockerfile update

Update and rename node.js.yml to docker.yml

good app name

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "snowpack build",
     "dev": "snowpack dev"
   },
   "author": "Riwan",
