--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "node": "^16.6.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
     "three": "^0.132.2"
