--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Riwan",
   "license": "ISC",
   "devDependencies": {
+    "@snowpack/plugin-react-refresh": "^2.5.0",
     "nodemon": "^2.0.12",
     "snowpack": "^3.8.8"
   },
